[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/save_load_panel.gd" id="1"]

[node name="SaveLoadPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -175.0
offset_right = 200.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save/Load Game"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBox/TitleBar"]
layout_mode = 2
text = "X"

[node name="ModeTabs" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SaveTab" type="Button" parent="MarginContainer/VBox/ModeTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Save"

[node name="LoadTab" type="Button" parent="MarginContainer/VBox/ModeTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Load"

[node name="SaveNameContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/SaveNameContainer"]
layout_mode = 2
text = "Name:"

[node name="SaveNameInput" type="LineEdit" parent="MarginContainer/VBox/SaveNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter save name..."

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="SavesContainer" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Save"
